# access-control-firmware

./: README.md  otadirectory.json  partition_manager.ipynb
Core V2.3.2/: TODO.md
Core V2.4.1/: .clang-format  .clang-tidy  .gitignore  CMakeCache.txt  CMakeLists.txt  sdkconfig  sdkconfig.defaults
Core-v2.4.1/: .clang-format  .gitignore  CMakeLists.txt  README.md  (+3 more)
Core-v2.4.1/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.cpp
Core-v2.4.1/main/common/: hardware.hpp  pins.hpp  types.cpp  types.hpp
Core-v2.4.1/main/drivers/: mfrc630.h  mfrc630.hpp
Core-v2.4.1/main/io/: Button.cpp  Button.hpp  Buzzer.cpp  Buzzer.hpp  BuzzerSounds.hpp  CardReader.cpp  CardReader.hpp  IO.cpp  IO.hpp  LEDAnimations.hpp  LEDControl.cpp  LEDControl.hpp  Speaker.cpp  Speaker.hpp  Temperature.cpp  Temperature.hpp
Core-v2.4.1/main/network/: hardware.cpp  http_manager.cpp  http_manager.hpp  network.cpp  network.hpp  ota.cpp  ota.hpp  pinging.cpp  storage.cpp  storage.hpp  usb.cpp  usb.hpp  websocket.cpp  websocket.hpp  wsacs.cpp  wsacs.hpp
Core-v2.4.1/main/network/storagee/: offline_list.hpp
Core-v3.0.0/main/: CMakeLists.txt  idf_component.yml  main.cpp
Core-v3.0.0/main/common/: types.cpp  types.hpp
Core-v3.0.0/main/drivers/: mfrc630.c
Core-v3.0.0/main/hardware/: hardware.cpp  hardware.hpp  pins.hpp  storage.cpp  storage.hpp  usb.cpp
Core-v3.0.0/main/io/: Button.cpp  Buzzer.cpp  Buzzer.hpp  BuzzerSounds.hpp  CardReader.cpp  IO.cpp  LEDControl.cpp  LEDControl.hpp
Core-v3.0.0/main/network/: http_manager.cpp  network.cpp  network.hpp  ota.cpp  ota.hpp
(+87 files in other folders)
